--- a/Projeto Web - Pizzaria/Css/pizzaWebSite.css
+++ b/Projeto Web - Pizzaria/Css/pizzaWebSite.css
@@ -82,3 +82,49 @@ header{
     display: none;
 }
 
+section{
+    padding: 90px 15% 80px;
+}
+
+.home{
+    height:88vh;
+    width:100%;
+    position: relative;
+    display: grid;
+    grid-template-columns: repeat (2, 1fr);
+    align-items: center;
+    gap: 2rem;
+}
+
+.home-img img{
+    width:100%;
+    height: auto;
+}
+
+.home-text h1{
+    font-size: var(--big-font);
+    line-heigt: 1.2;
+    margin-bottom: 2rem;
+}
+
+.home-text p{
+    font-size: var(--p-font);
+    font-weight: 500;
+    color: var(--second-color);
+    line-heigt: 32px;
+    margin-bottom: 2.3rem;
+}
+
+.btn{
+    display: inline-block;
+    padding: 14px 26px;
+    background: var(--main-color);
+    color: var(--big-color);
+    font-size: 15px;
+    font-weight: 600;
+    border-radius: 5rem;
+    transition: all .40s ease;
+}
+
+
+
